# bbf

./: .gitignore  COPYING  LICENSE  Makefile.am  README  README.md  configure.ac  dmbbf.c  dmbbf.h  dmbbfcommon.c  dmbbfcommon.h  dmcommon.c  dmcommon.h  dmcwmp.c  dmcwmp.h  dmdiagnostics.c  dmdiagnostics.h  dmentry.c  dmentry.h  dmentryjson.c  dmentryjson.h  dmentrylibrary.c  dmentrylibrary.h  dmjson.c  dmjson.h  dmmem.c  dmmem.h  dmmemjson.c  dmmemjson.h  dmoperate.c  dmoperate.h  dmubus.c  dmubus.h  dmuci.c  dmuci.h  wepkey.c  wepkey.h
dmtree/tr064/: upnp_common.c  upnp_common.h  upnp_configuration.c  upnp_configuration.h  upnp_device.c  upnp_device.h  upnp_deviceinfo.c  upnp_deviceinfo.h  upnp_monitoring.c  upnp_monitoring.h
dmtree/tr104/: voice_services.c  voice_services.h
dmtree/tr143/: diagnostics.c  diagnostics.h
dmtree/tr157/: bulkdata.c  bulkdata.h  softwaremodules.c  softwaremodules.h
dmtree/tr181/: atm.c  atm.h  bridging.c  bridging.h  datamodelversion.c  datamodelversion.h  device-iopsyswrt.c  device.c  device.h  deviceinfo-iopsyswrt.c  deviceinfo-openwrt.c  deviceinfo.c  deviceinfo.h  dhcpv4.c  dhcpv4.h  dhcpv6.c  dhcpv6.h  dns.c  dns.h  dsl.c  dsl.h  dynamicdns.c  dynamicdns.h  ethernet.c  ethernet.h  firewall.c  firewall.h  gre.c  gre.h  hosts-iopsyswrt.c  hosts-openwrt.c  hosts.c  hosts.h  interfacestack.c  interfacestack.h  ip.c  ip.h  lanconfigsecurity.c  lanconfigsecurity.h  managementserver.c  (+58 more)
dynamic_parameters/json/: example.json
json/: X_IOPSYS_EU_Buttons.json  X_IOPSYS_EU_Dropbear.json  X_IOPSYS_EU_OWSD.json  X_IOPSYS_EU_Syslog.json  X_IOPSYS_EU_WiFiLife.json  convertor_json_to_c.py  generate_excel.py  generate_source_code.py  tr104.json  tr181.json
libbbf_api/: dmbbf.c  dmbbf.h  dmcommon.c  dmcommon.h  dmjson.c  dmjson.h  dmmem.c  dmmem.h  dmubus.c  dmubus.h  dmuci.c  dmuci.h
openwrt/bbf/: Config_bbfdm.in  Makefile  git-src
scripts/functions/: download_launch  ipping_launch  nslookup_launch  serverselection_launch  traceroute_launch  udpecho_launch  upload_launch
tools/: generate_c.py  generate_json.py  generate_xml.sh  generate_xml_bbf.sh  generator_c.py  generator_json.py  generator_json_with_backend.py
ubus/: ubus.py
