MAINTAINERCLEANFILES = Makefile.in

libbbfdm_includedir = $(includedir)/libbbfdm
libbbf_api_includedir = $(includedir)/libbbf_api

libbbfdm_tr181_includedir = $(libbbfdm_includedir)
libbbfdm_include_HEADERS = *.h
libbbf_api_include_HEADERS = libbbf_api/*.h
libbbfdm_tr181_include_HEADERS = dmtree/tr181/*.h

SUBDIRS = bin
